# ynab-analysis

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
.chores/: update-environment.py
docs/: environment.yaml
examples/: TestingNotebook.ipynb
src/ynab-analysis/: __init__.py  _version.py
src/ynab-analysis/models/: __init__.py  budgets.py  transactions.py
