[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "versioningit"]

[project]
name = "ynab-analysis"
description = "A Python library for interacting with YNAB"
requires-python = ">=3.12"
dynamic = ["version"]
maintainers = [
    { name = "Evelyn King", email = "evelyn@evieking.com" }
]
license = { text = "MIT" }
dependencies = [
    "python-dotenv",
    "requests",
    "pydantic",
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "statsmodels",
    "pip",
    "versioningit",
    "wheel"
]

[project.optional-dependencies]
analysis = [
    "jupyter",
    "bokeh",
    "panel"
]
test = [
    "nox",
    "pytest",
    "pytest-datadir",
]
docs = [
    "sphinx",
    "numpydoc",
    "sphinx-autodoc-typehints",
    "sphinx_autosummary_accessors"
]
all = ["ynab-analysis[test,docs]"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.hooks.versioningit-onbuild]
build-file = "src/ynab-analysis/_version.py"
source-file = "src/ynab-analysis/_version.py"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.0"

[tool.versioningit.format]
dirty = "{version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance = "{version}.dev{distance}+{branch}.{vcs}{rev}"
distance-dirty = "{version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "W", "T", "B9", "I", "UP"]
ignore = [
    "B905",    # `zip()` without an explicit `strict=` parameter
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in `__init__`
    "D203",    # Blank line before class
    "D213",    # Summary on first line of docstring
    "D402",    # First line should not be the function's signature
    "D401",    # First line of docstring should be in imperative mood
    "E501",    # Line too long
    "T20",     # flake8-print
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.12"
